--- a/public/admin/reviews.html
+++ b/public/admin/reviews.html
@@ -98,7 +98,6 @@
   </div>
 
   <div id="templateSettingsContent" class="space-y-6">
-
     <!-- Toggle Buttons -->
     <div class="flex space-x-4">
       <button id="showEmailTemplate" class="px-4 py-2 rounded-lg bg-indigo-100 text-indigo-700 font-medium hover:bg-indigo-200 transition">Email Template</button>
@@ -107,14 +106,17 @@
 
     <!-- Email Template Editor -->
     <div id="emailTemplateEditor" class="space-y-4">
-      <label class="block text-sm text-gray-600">Email Subject</label>
-      <input type="text" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500" placeholder="We'd love your feedback!" />
+      <label for="emailSubject" class="block text-sm text-gray-600">Email Subject</label>
+      <input id="emailSubject" type="text" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500" placeholder="We'd love your feedback!" />
 
-      <label class="block text-sm text-gray-600">Email Body</label>
-      <textarea class="w-full h-40 px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500" placeholder="Hi {{customer_name}}, we'd appreciate your review..."></textarea>
+      <label for="emailBody" class="block text-sm text-gray-600">Email Body</label>
+      <textarea id="emailBody" class="w-full h-40 px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500" placeholder="Hi {{customer_name}}, we'd appreciate your review..."></textarea>
 
       <div class="text-sm text-gray-500">
-        <strong>Dynamic Tags:</strong> <code>{{customer_name}}</code>, <code>{{service_name}}</code>, <code>{{review_link}}</code>
+        <strong>Dynamic Tags:</strong>
+        <code>{{customer_name}}</code>,
+        <code>{{service_name}}</code>,
+        <code>{{review_link}}</code>
       </div>
 
       <div>
@@ -125,18 +127,40 @@
           <button class="bg-gray-200 text-sm px-3 py-1 rounded hover:bg-gray-300">Underline</button>
         </div>
       </div>
+
+      <div class="text-right pt-2">
+        <button id="resetEmailTemplate" class="text-sm text-red-600 hover:underline">Reset to Default</button>
+      </div>
+
+      <!-- Live Email Preview -->
+      <div class="border rounded-lg p-4 bg-gray-50 text-sm text-gray-700">
+        <strong class="block mb-1">Preview:</strong>
+        <div id="emailPreview" class="whitespace-pre-line"></div>
+      </div>
     </div>
 
-    <!-- SMS Template Editor (hidden by default) -->
+    <!-- SMS Template Editor -->
     <div id="smsTemplateEditor" class="space-y-4 hidden">
-      <label class="block text-sm text-gray-600">SMS Body</label>
-      <textarea class="w-full h-32 px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500" placeholder="Hi {{customer_name}}, let us know how we did: {{review_link}}"></textarea>
+      <label for="smsBody" class="block text-sm text-gray-600">SMS Body</label>
+      <textarea id="smsBody" class="w-full h-32 px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500" placeholder="Hi {{customer_name}}, let us know how we did: {{review_link}}"></textarea>
+
       <div class="text-sm text-gray-500">
-        <strong>Dynamic Tags:</strong> <code>{{customer_name}}</code>, <code>{{review_link}}</code>
+        <strong>Dynamic Tags:</strong>
+        <code>{{customer_name}}</code>,
+        <code>{{review_link}}</code>
       </div>
       <p class="text-xs text-gray-400">💡 SMS must stay under 160 characters to avoid segmentation.</p>
-    </div>
 
+      <div class="text-right pt-2">
+        <button id="resetSmsTemplate" class="text-sm text-red-600 hover:underline">Reset to Default</button>
+      </div>
+
+      <!-- Live SMS Preview -->
+      <div class="border rounded-lg p-4 bg-gray-50 text-sm text-gray-700">
+        <strong class="block mb-1">Preview:</strong>
+        <div id="smsPreview" class="whitespace-pre-line"></div>
+      </div>
+    </div>
   </div>
 </section>
 
