--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -1,7 +1,5 @@
-<aside
-  id="sidebar"
-  class="fixed md:relative inset-y-0 left-0 z-40 w-72 min-h-screen bg-white shadow-lg transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out flex flex-col"
->
+<aside id="sidebar" class="w-64 min-h-screen bg-white shadow-md fixed md:relative z-50 transform transition-transform duration-300 -translate-x-full md:translate-x-0 flex flex-col justify-between">
+
   <!-- Top: Logo & Business Info -->
   <div class="p-6 flex items-center gap-3 bg-white border-b shadow sticky top-0 z-10">
     <img id="logo" src="/assets/logo-placeholder.png" alt="Logo" class="w-10 h-10 rounded-full shadow-md" />
@@ -11,37 +9,105 @@
     </div>
   </div>
 
-  <!-- Mobile backdrop (optional for mobile sidebar toggle) -->
-  <div id="sidebarBackdrop" class="fixed inset-0 bg-black bg-opacity-30 hidden z-30 md:hidden"></div>
+  <!-- Nav Menu -->
+  <nav class="flex-1 overflow-y-auto px-4 py-6 space-y-2 text-gray-700 text-sm">
+    <a href="/admin/dashboard" class="flex items-center gap-3 px-3 py-2 rounded hover:bg-gray-100">
+      <i class="fas fa-chart-line w-4"></i> Dashboard
+    </a>
 
-  <!-- Navigation -->
-  <nav class="flex-1 overflow-y-auto px-4 py-4 space-y-1 font-medium text-gray-700">
-    <a href="/admin/dashboard.html" class="block px-4 py-2 rounded hover:bg-blue-50">🏠 Dashboard</a>
-    <a href="/admin/services.html" class="block px-4 py-2 rounded hover:bg-blue-50">🧹 Services</a>
-    <a href="/admin/bookings.html" class="block px-4 py-2 rounded hover:bg-blue-50">📆 Bookings</a>
-    <a href="/admin/calendar.html" class="block px-4 py-2 rounded hover:bg-blue-50">🗓️ Calendar</a>
-    <a href="/admin/reviews.html" class="block px-4 py-2 rounded hover:bg-blue-50">📈 Reviews</a>
+    <!-- Domains -->
+    <div>
+      <button onclick="toggleSubmenu('domainsSubmenu')" class="w-full flex items-center justify-between px-3 py-2 rounded hover:bg-gray-100">
+        <span class="flex items-center gap-3"><i class="fas fa-globe w-4"></i> Domains</span>
+        <i class="fas fa-chevron-down text-xs"></i>
+      </button>
+      <div id="domainsSubmenu" class="hidden ml-6 mt-1 space-y-1">
+        <a href="/admin/domains/subdomains" class="block px-3 py-1 hover:bg-gray-100 rounded">Subdomains</a>
+        <a href="/admin/domains/custom" class="block px-3 py-1 hover:bg-gray-100 rounded">Custom Domains</a>
+      </div>
+    </div>
 
-    <a href="/admin/staff.html" class="block px-4 py-2 rounded hover:bg-blue-50">👥 Staff</a>
-    <a href="/admin/clients.html" class="block px-4 py-2 rounded hover:bg-blue-50">👤 Clients</a>
-    <a href="/admin/invoices.html" class="block px-4 py-2 rounded hover:bg-blue-50">📄 Invoices</a>
-    <a href="/admin/payments.html" class="block px-4 py-2 rounded hover:bg-blue-50">💳 Payments</a>
-    <a href="/admin/availability.html" class="block px-4 py-2 rounded hover:bg-blue-50">⏱ Availability</a>
+    <!-- Marketing -->
+    <div>
+      <button onclick="toggleSubmenu('marketingSubmenu')" class="w-full flex items-center justify-between px-3 py-2 rounded hover:bg-gray-100">
+        <span class="flex items-center gap-3"><i class="fas fa-bullhorn w-4"></i> Marketing</span>
+        <i class="fas fa-chevron-down text-xs"></i>
+      </button>
+      <div id="marketingSubmenu" class="hidden ml-6 mt-1 space-y-1">
+        <a href="/admin/marketing/coupons" class="block px-3 py-1 hover:bg-gray-100 rounded">Coupons</a>
+        <a href="/admin/marketing/discounts" class="block px-3 py-1 hover:bg-gray-100 rounded">Discounts</a>
+        <a href="/admin/marketing/referrals" class="block px-3 py-1 hover:bg-gray-100 rounded">Referrals</a>
+        <a href="/admin/marketing/giftcards" class="block px-3 py-1 hover:bg-gray-100 rounded">Gift Cards</a>
+        <a href="/admin/marketing/blog" class="block px-3 py-1 hover:bg-gray-100 rounded">Blog</a>
+      </div>
+    </div>
 
-    <a href="/admin/marketing.html" class="block px-4 py-2 rounded hover:bg-blue-50">📣 Marketing</a>
-    <a href="/admin/discounts.html" class="block px-4 py-2 rounded hover:bg-blue-50">🏷️ Discounts</a>
-    <a href="/admin/settings.html" class="block px-4 py-2 rounded hover:bg-blue-50">⚙️ Settings</a>
-    <a href="/admin/billing.html" class="block px-4 py-2 rounded hover:bg-blue-50">🧾 Billing</a>
-    <a href="/admin/reports.html" class="block px-4 py-2 rounded hover:bg-blue-50" data-role="admin">📊 Reports</a>
-    <a href="/admin/support_ticket.html" class="block px-4 py-2 rounded hover:bg-blue-50">🆘 Support</a>
-    <a href="/admin/zapier.html" class="block px-4 py-2 rounded hover:bg-blue-50">⚡ Automations</a>
-    <a href="/admin/ai-assistant.html" class="block px-4 py-2 rounded hover:bg-blue-50">🤖 AI Assistant</a>
+    <!-- Website -->
+    <a href="/admin/website" class="flex items-center gap-3 px-3 py-2 rounded hover:bg-gray-100">
+      <i class="fas fa-laptop-code w-4"></i> Website
+    </a>
+
+    <!-- Forms -->
+    <div>
+      <button onclick="toggleSubmenu('formsSubmenu')" class="w-full flex items-center justify-between px-3 py-2 rounded hover:bg-gray-100">
+        <span class="flex items-center gap-3"><i class="fas fa-clipboard-list w-4"></i> Forms</span>
+        <i class="fas fa-chevron-down text-xs"></i>
+      </button>
+      <div id="formsSubmenu" class="hidden ml-6 mt-1 space-y-1">
+        <a href="/admin/forms/embed" class="block px-3 py-1 hover:bg-gray-100 rounded">Embed Forms</a>
+        <a href="/admin/forms/create" class="block px-3 py-1 hover:bg-gray-100 rounded">Create Forms</a>
+        <a href="/admin/forms/entries" class="block px-3 py-1 hover:bg-gray-100 rounded">Entries</a>
+        <a href="/admin/forms/logs" class="block px-3 py-1 hover:bg-gray-100 rounded">Logs</a>
+        <a href="/admin/forms/reports" class="block px-3 py-1 hover:bg-gray-100 rounded">Reports</a>
+      </div>
+    </div>
+
+    <!-- Support -->
+    <a href="/admin/support_ticket.html" class="flex items-center gap-3 px-3 py-2 rounded hover:bg-gray-100">
+      <i class="fas fa-headset w-4"></i> Support Tickets
+    </a>
+
+    <!-- Staff -->
+    <a href="/admin/staff" class="flex items-center gap-3 px-3 py-2 rounded hover:bg-gray-100">
+      <i class="fas fa-user-shield w-4"></i> Staff Management
+    </a>
+
+    <!-- Inventory -->
+    <a href="/admin/inventory" class="flex items-center gap-3 px-3 py-2 rounded hover:bg-gray-100">
+      <i class="fas fa-boxes w-4"></i> Inventory
+    </a>
+
+    <!-- AI Assistant -->
+    <a href="/admin/ai" class="flex items-center gap-3 px-3 py-2 rounded hover:bg-gray-100">
+      <i class="fas fa-robot w-4"></i> AI Assistant
+    </a>
+
+    <!-- Calendar -->
+    <a href="/admin/calendar" class="flex items-center gap-3 px-3 py-2 rounded hover:bg-gray-100">
+      <i class="fas fa-calendar-alt w-4"></i> Calendar
+    </a>
+
+    <!-- Settings -->
+    <a href="/admin/settings" class="flex items-center gap-3 px-3 py-2 rounded hover:bg-gray-100">
+      <i class="fas fa-cog w-4"></i> Settings
+    </a>
   </nav>
 
-  <!-- Bottom: Logout -->
-  <div class="p-4 border-t bg-white sticky bottom-0 z-10 shadow-inner">
-    <button id="logoutBtn" class="w-full px-4 py-2 text-white bg-blue-600 rounded-md hover:bg-blue-700 transition">
-      🚪 Logout
-    </button>
+  <!-- Bottom CTAs -->
+  <div class="px-4 py-4 border-t bg-white space-y-2">
+    <a href="/admin/book" class="flex items-center justify-center gap-2 w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700 font-medium">
+      <i class="fas fa-calendar-check"></i> Book Now
+    </a>
+    <a href="/logout" class="flex items-center justify-center gap-2 text-red-500 hover:underline text-sm">
+      <i class="fas fa-sign-out-alt"></i> Logout
+    </a>
   </div>
 </aside>
+
+<!-- JS for Submenus -->
+<script>
+  function toggleSubmenu(id) {
+    const submenu = document.getElementById(id);
+    submenu.classList.toggle('hidden');
+  }
+</script>
