--- a/public/admin/layout.html
+++ b/public/admin/layout.html
@@ -4,40 +4,43 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Admin Panel</title>
-
-  <!-- Tailwind CSS -->
   <link rel="stylesheet" href="/dist/output.css" />
-
-  <!-- Font Awesome -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-    integrity="sha512-zPwIFJj+x+2/8Ws3zWPLFJGKxChMEyVZJZTcskBkDAN1iCdDNAMqdEbW5SBW4WDCDFLQSkUJ5jHx6ZRk6O/1gA=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  />
 </head>
-<body class="bg-gray-50 text-gray-800 flex min-h-screen">
+<body class="bg-gray-50 text-gray-800 min-h-screen flex">
 
-  <!-- Sidebar -->
-  <!-- You can also server-include this if using a view engine -->
-  <!-- Or copy the code from sidebar.html here -->
-  <!-- OR use client-side JS to load it dynamically -->
-  <div>
-    <!-- START: Sidebar include -->
-    <!-- Copy sidebar.html content here if static -->
-    <!-- Or use a view engine or fetch to include -->
-    <!-- We'll assume you include it like this: -->
-    <!--#include file="sidebar.html" -->
-  </div>
+  <!-- Mobile Hamburger -->
+  <button
+    class="md:hidden fixed top-4 left-4 z-50 bg-white border p-2 rounded shadow"
+    onclick="document.getElementById('sidebar').classList.toggle('-translate-x-full')"
+  >
+    ☰
+  </button>
 
-  <!-- Main Content Area -->
-  <main class="flex-1 overflow-y-auto p-6">
-    <!-- Page content goes here -->
-    <!-- Replace this on each page -->
-    <h1 class="text-2xl font-bold mb-4">Welcome to Admin Panel</h1>
-    <p>This is placeholder content. Replace this section in each page.</p>
+  <!-- Sidebar Container (loaded via fetch) -->
+  <div id="sidebar-container" class="z-40"></div>
+
+  <!-- Main Content -->
+  <main class="flex-1 p-6 ml-0 md:ml-64 transition-all">
+    <h1 class="text-2xl font-bold mb-4">Welcome to Admin</h1>
+    <p>Your main content goes here.</p>
   </main>
 
+  <!-- JS: Load sidebar and highlight active nav -->
+  <script>
+    // Dynamically load sidebar
+    fetch("/admin/sidebar.html")
+      .then(res => res.text())
+      .then(html => {
+        document.getElementById("sidebar-container").innerHTML = html;
+
+        // Highlight active page
+        const currentPath = window.location.pathname;
+        document.querySelectorAll("#sidebar a[href]").forEach(link => {
+          if (link.getAttribute("href") === currentPath) {
+            link.classList.add("bg-blue-100", "text-blue-700", "font-semibold");
+          }
+        });
+      });
+  </script>
 </body>
 </html>
