--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -1,111 +1,77 @@
-<aside id="sidebar" class="w-64 min-h-screen bg-white border-r shadow-lg fixed md:relative z-50 transform transition-transform duration-300 -translate-x-full md:translate-x-0 flex flex-col justify-between">
+<aside id="sidebar" class="w-64 min-h-screen bg-white border-r shadow-lg fixed inset-y-0 left-0 z-40 transform transition-transform duration-300 -translate-x-full md:translate-x-0 flex flex-col">
 
-  <!-- Logo + Business Info -->
-  <div class="p-6 flex items-center gap-3 bg-white border-b shadow sticky top-0 z-10">
-    <img id="logo" src="/assets/logo-placeholder.png" alt="Logo" class="w-10 h-10 rounded-full shadow-md" />
-    <div class="overflow-hidden">
-      <h1 id="bizName" class="text-lg font-bold uppercase truncate text-blue-600">Business</h1>
-      <p id="sidebarUserName" class="text-sm text-gray-500 truncate">Admin</p>
+  <!-- Logo and Business Info -->
+  <div class="p-6 flex items-center gap-3 border-b shadow-sm bg-white">
+    <img src="/assets/logo-placeholder.png" alt="Logo" class="w-10 h-10 rounded-full shadow object-cover" />
+    <div>
+      <h1 class="text-base font-extrabold text-blue-600 uppercase leading-tight">LADYGREENER</h1>
+      <p class="text-xs text-gray-400 truncate">Admin</p>
     </div>
   </div>
 
-  <!-- Main Navigation -->
-  <nav class="flex-1 overflow-y-auto px-4 py-5 space-y-2 text-sm font-medium text-gray-700">
+  <!-- Navigation -->
+  <nav class="flex-1 overflow-y-auto px-4 py-6 space-y-2 text-sm font-medium text-gray-800">
 
-    <a href="/admin/dashboard" class="flex items-center gap-3 px-3 py-2 rounded hover:bg-blue-50 transition">
-      <i class="fas fa-chart-line text-blue-500 w-5"></i>
+    <a href="/admin/dashboard" class="flex items-center gap-3 px-3 py-2 rounded-lg hover:bg-blue-50 transition">
+      <i class="fas fa-home text-blue-500 w-4"></i>
       Dashboard
     </a>
 
-    <!-- Domains -->
-    <div>
-      <button onclick="toggleSubmenu('domainsSubmenu')" class="w-full flex items-center justify-between px-3 py-2 rounded hover:bg-blue-50 transition">
-        <span class="flex items-center gap-3">
-          <i class="fas fa-globe text-blue-500 w-5"></i> Domains
-        </span>
-        <i class="fas fa-chevron-down text-gray-400 text-xs"></i>
-      </button>
-      <div id="domainsSubmenu" class="hidden ml-8 mt-1 space-y-1">
-        <a href="/admin/domains/subdomains" class="block px-2 py-1 rounded hover:bg-gray-100">Subdomains</a>
-        <a href="/admin/domains/custom" class="block px-2 py-1 rounded hover:bg-gray-100">Custom Domains</a>
-      </div>
-    </div>
+    <a href="/admin/domains" class="flex items-center gap-3 px-3 py-2 rounded-lg hover:bg-blue-50 transition">
+      <i class="fas fa-globe text-blue-500 w-4"></i>
+      Domains
+    </a>
 
-    <!-- Marketing -->
-    <div>
-      <button onclick="toggleSubmenu('marketingSubmenu')" class="w-full flex items-center justify-between px-3 py-2 rounded hover:bg-blue-50 transition">
-        <span class="flex items-center gap-3">
-          <i class="fas fa-bullhorn text-blue-500 w-5"></i> Marketing
-        </span>
-        <i class="fas fa-chevron-down text-gray-400 text-xs"></i>
-      </button>
-      <div id="marketingSubmenu" class="hidden ml-8 mt-1 space-y-1">
-        <a href="/admin/marketing/coupons" class="block px-2 py-1 rounded hover:bg-gray-100">Coupons</a>
-        <a href="/admin/marketing/discounts" class="block px-2 py-1 rounded hover:bg-gray-100">Discounts</a>
-        <a href="/admin/marketing/referrals" class="block px-2 py-1 rounded hover:bg-gray-100">Referrals</a>
-        <a href="/admin/marketing/giftcards" class="block px-2 py-1 rounded hover:bg-gray-100">Gift Cards</a>
-        <a href="/admin/marketing/blog" class="block px-2 py-1 rounded hover:bg-gray-100">Blog</a>
-      </div>
-    </div>
+    <a href="/admin/marketing" class="flex items-center gap-3 px-3 py-2 rounded-lg hover:bg-blue-50 transition">
+      <i class="fas fa-bullhorn text-blue-500 w-4"></i>
+      Marketing
+    </a>
 
-    <!-- Website -->
-    <a href="/admin/website" class="flex items-center gap-3 px-3 py-2 rounded hover:bg-blue-50 transition">
-      <i class="fas fa-laptop-code text-blue-500 w-5"></i>
+    <a href="/admin/website" class="flex items-center gap-3 px-3 py-2 rounded-lg hover:bg-blue-50 transition">
+      <i class="fas fa-laptop-code text-blue-500 w-4"></i>
       Website
     </a>
 
-    <!-- Forms -->
-    <div>
-      <button onclick="toggleSubmenu('formsSubmenu')" class="w-full flex items-center justify-between px-3 py-2 rounded hover:bg-blue-50 transition">
-        <span class="flex items-center gap-3">
-          <i class="fas fa-clipboard-list text-blue-500 w-5"></i> Forms
-        </span>
-        <i class="fas fa-chevron-down text-gray-400 text-xs"></i>
-      </button>
-      <div id="formsSubmenu" class="hidden ml-8 mt-1 space-y-1">
-        <a href="/admin/forms/embed" class="block px-2 py-1 rounded hover:bg-gray-100">Embed Forms</a>
-        <a href="/admin/forms/create" class="block px-2 py-1 rounded hover:bg-gray-100">Create Forms</a>
-        <a href="/admin/forms/entries" class="block px-2 py-1 rounded hover:bg-gray-100">Entries</a>
-        <a href="/admin/forms/logs" class="block px-2 py-1 rounded hover:bg-gray-100">Logs</a>
-        <a href="/admin/forms/reports" class="block px-2 py-1 rounded hover:bg-gray-100">Reports</a>
-      </div>
-    </div>
+    <a href="/admin/forms" class="flex items-center gap-3 px-3 py-2 rounded-lg hover:bg-blue-50 transition">
+      <i class="fas fa-clipboard-list text-blue-500 w-4"></i>
+      Forms
+    </a>
 
-    <a href="/admin/support_ticket.html" class="flex items-center gap-3 px-3 py-2 rounded hover:bg-blue-50 transition">
-      <i class="fas fa-headset text-blue-500 w-5"></i>
+    <a href="/admin/support_ticket.html" class="flex items-center gap-3 px-3 py-2 rounded-lg hover:bg-blue-50 transition">
+      <i class="fas fa-headset text-blue-500 w-4"></i>
       Support Tickets
     </a>
 
-    <a href="/admin/staff" class="flex items-center gap-3 px-3 py-2 rounded hover:bg-blue-50 transition">
-      <i class="fas fa-user-shield text-blue-500 w-5"></i>
+    <a href="/admin/staff" class="flex items-center gap-3 px-3 py-2 rounded-lg hover:bg-blue-50 transition">
+      <i class="fas fa-user-shield text-blue-500 w-4"></i>
       Staff Management
     </a>
 
-    <a href="/admin/inventory" class="flex items-center gap-3 px-3 py-2 rounded hover:bg-blue-50 transition">
-      <i class="fas fa-boxes text-blue-500 w-5"></i>
+    <a href="/admin/inventory" class="flex items-center gap-3 px-3 py-2 rounded-lg hover:bg-blue-50 transition">
+      <i class="fas fa-boxes text-blue-500 w-4"></i>
       Inventory
     </a>
 
-    <a href="/admin/ai" class="flex items-center gap-3 px-3 py-2 rounded hover:bg-blue-50 transition">
-      <i class="fas fa-robot text-blue-500 w-5"></i>
+    <a href="/admin/ai" class="flex items-center gap-3 px-3 py-2 rounded-lg hover:bg-blue-50 transition">
+      <i class="fas fa-robot text-blue-500 w-4"></i>
       AI Assistant
     </a>
 
-    <a href="/admin/calendar" class="flex items-center gap-3 px-3 py-2 rounded hover:bg-blue-50 transition">
-      <i class="fas fa-calendar-alt text-blue-500 w-5"></i>
+    <a href="/admin/calendar" class="flex items-center gap-3 px-3 py-2 rounded-lg hover:bg-blue-50 transition">
+      <i class="fas fa-calendar-alt text-blue-500 w-4"></i>
       Calendar
     </a>
 
-    <a href="/admin/settings" class="flex items-center gap-3 px-3 py-2 rounded hover:bg-blue-50 transition">
-      <i class="fas fa-cog text-blue-500 w-5"></i>
+    <a href="/admin/settings" class="flex items-center gap-3 px-3 py-2 rounded-lg hover:bg-blue-50 transition">
+      <i class="fas fa-cog text-blue-500 w-4"></i>
       Settings
     </a>
 
   </nav>
 
-  <!-- CTA Section -->
+  <!-- CTA and Logout -->
   <div class="px-4 py-4 border-t bg-white space-y-2">
-    <a href="/admin/book" class="flex items-center justify-center gap-2 w-full bg-blue-600 text-white py-2 rounded-md hover:bg-blue-700 font-semibold transition">
+    <a href="/admin/book" class="btn btn-success w-full flex justify-center items-center gap-2">
       <i class="fas fa-calendar-check"></i> Book Now
     </a>
     <a href="/logout" class="flex items-center justify-center gap-2 text-red-500 hover:underline text-sm transition">
@@ -113,11 +79,3 @@
     </a>
   </div>
 </aside>
-
-<!-- Submenu Toggle JS -->
-<script>
-  function toggleSubmenu(id) {
-    const submenu = document.getElementById(id);
-    submenu.classList.toggle('hidden');
-  }
-</script>
