Update sidebar.html to use SVG icons instead of Font Awesome

--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -19,47 +19,69 @@
   <!-- Navigation Links -->
   <nav class="flex-1 overflow-y-auto px-4 py-6 space-y-1 text-sm font-medium">
     <a href="/admin/dashboard" class="flex items-center gap-3 px-3 py-2 rounded hover:bg-blue-50 transition">
-      <i class="fa-solid fa-home text-primary w-5"></i>
+      <svg class="w-5 h-5 text-primary" fill="currentColor" viewBox="0 0 20 20">
+        <path d="M10.707 1.293a1 1 0 00-1.414 0L1 9.586V18a2 2 0 002 2h5v-6h4v6h5a2 2 0 002-2V9.586l-8.293-8.293z" />
+      </svg>
       Dashboard
     </a>
     <a href="/admin/domains" class="flex items-center gap-3 px-3 py-2 rounded hover:bg-blue-50 transition">
-      <i class="fa-solid fa-globe text-primary w-5"></i>
+      <svg class="w-5 h-5 text-primary" fill="currentColor" viewBox="0 0 24 24">
+        <path d="M12 2a10 10 0 100 20 10 10 0 000-20zM2 12h20M12 2c2.2 2.6 3 6.1 3 10s-.8 7.4-3 10c-2.2-2.6-3-6.1-3-10s.8-7.4 3-10z" />
+      </svg>
       Domains
     </a>
     <a href="/admin/marketing" class="flex items-center gap-3 px-3 py-2 rounded hover:bg-blue-50 transition">
-      <i class="fa-solid fa-bullhorn text-primary w-5"></i>
+      <svg class="w-5 h-5 text-primary" fill="currentColor" viewBox="0 0 24 24">
+        <path d="M21 4H3v16h18V4zm-2 2v4h-4V6h4zM5 6h4v4H5V6zm0 6h4v4H5v-4zm6 0h4v4h-4v-4zm6 0h4v4h-4v-4z" />
+      </svg>
       Marketing
     </a>
     <a href="/admin/website" class="flex items-center gap-3 px-3 py-2 rounded hover:bg-blue-50 transition">
-      <i class="fa-solid fa-laptop-code text-primary w-5"></i>
+      <svg class="w-5 h-5 text-primary" fill="currentColor" viewBox="0 0 24 24">
+        <path d="M4 5h16v14H4V5zm2 2v2h12V7H6zm0 4v6h12v-6H6z" />
+      </svg>
       Website
     </a>
     <a href="/admin/forms" class="flex items-center gap-3 px-3 py-2 rounded hover:bg-blue-50 transition">
-      <i class="fa-solid fa-clipboard-list text-primary w-5"></i>
+      <svg class="w-5 h-5 text-primary" fill="currentColor" viewBox="0 0 24 24">
+        <path d="M7 4h10v2H7V4zm0 4h10v2H7V8zm0 4h7v2H7v-2zm0 4h10v2H7v-2z" />
+      </svg>
       Forms
     </a>
     <a href="/admin/support_ticket.html" class="flex items-center gap-3 px-3 py-2 rounded hover:bg-blue-50 transition">
-      <i class="fa-solid fa-headset text-primary w-5"></i>
+      <svg class="w-5 h-5 text-primary" fill="currentColor" viewBox="0 0 24 24">
+        <path d="M2 5a2 2 0 012-2h8l4 4v2h6v11a2 2 0 01-2 2H4a2 2 0 01-2-2V5z" />
+      </svg>
       Support Tickets
     </a>
     <a href="/admin/staff" class="flex items-center gap-3 px-3 py-2 rounded hover:bg-blue-50 transition">
-      <i class="fa-solid fa-user-shield text-primary w-5"></i>
+      <svg class="w-5 h-5 text-primary" fill="currentColor" viewBox="0 0 24 24">
+        <path d="M12 12c2.7 0 8 1.3 8 4v2H4v-2c0-2.7 5.3-4 8-4zm0-2a4 4 0 100-8 4 4 0 000 8z" />
+      </svg>
       Staff Management
     </a>
     <a href="/admin/inventory" class="flex items-center gap-3 px-3 py-2 rounded hover:bg-blue-50 transition">
-      <i class="fa-solid fa-boxes-stacked text-primary w-5"></i>
+      <svg class="w-5 h-5 text-primary" fill="currentColor" viewBox="0 0 24 24">
+        <path d="M3 4h18v2H3V4zm0 4h18v2H3V8zm0 4h12v2H3v-2zm0 4h12v2H3v-2z" />
+      </svg>
       Inventory
     </a>
     <a href="/admin/ai" class="flex items-center gap-3 px-3 py-2 rounded hover:bg-blue-50 transition">
-      <i class="fa-solid fa-robot text-primary w-5"></i>
+      <svg class="w-5 h-5 text-primary" fill="currentColor" viewBox="0 0 24 24">
+        <path d="M12 4a8 8 0 00-8 8v1h16v-1a8 8 0 00-8-8zM4 15h16v2H4z" />
+      </svg>
       AI Assistant
     </a>
     <a href="/admin/calendar" class="flex items-center gap-3 px-3 py-2 rounded hover:bg-blue-50 transition">
-      <i class="fa-solid fa-calendar-days text-primary w-5"></i>
+      <svg class="w-5 h-5 text-primary" fill="currentColor" viewBox="0 0 24 24">
+        <path d="M7 2v2H5a2 2 0 00-2 2v14h18V6a2 2 0 00-2-2h-2V2h-2v2H9V2H7zm0 6h10v2H7V8z" />
+      </svg>
       Calendar
     </a>
     <a href="/admin/settings" class="flex items-center gap-3 px-3 py-2 rounded hover:bg-blue-50 transition">
-      <i class="fa-solid fa-gear text-primary w-5"></i>
+      <svg class="w-5 h-5 text-primary" fill="currentColor" viewBox="0 0 24 24">
+        <path d="M12 8a4 4 0 100 8 4 4 0 000-8zm0-6a2 2 0 012 2v1.1c.7.1 1.4.3 2 .6l.8-.8a2 2 0 112.8 2.8l-.8.8c.3.6.5 1.3.6 2H20a2 2 0 012 2v1a2 2 0 01-2 2h-1.1a7.6 7.6 0 01-.6 2l.8.8a2 2 0 11-2.8 2.8l-.8-.8a7.6 7.6 0 01-2 .6V20a2 2 0 01-2 2h-1a2 2 0 01-2-2v-1.1a7.6 7.6 0 01-2-.6l-.8.8a2 2 0 11-2.8-2.8l.8-.8a7.6 7.6 0 01-.6-2H4a2 2 0 01-2-2v-1a2 2 0 012-2h1.1c.1-.7.3-1.4.6-2l-.8-.8a2 2 0 112.8-2.8l.8.8c.6-.3 1.3-.5 2-.6V4a2 2 0 012-2h1z" />
+      </svg>
       Settings
     </a>
   </nav>
@@ -70,14 +92,18 @@
       href="/admin/book"
       class="w-full flex items-center justify-center gap-2 bg-blue-600 hover:bg-blue-700 text-white py-2 rounded-md text-sm font-medium shadow"
     >
-      <i class="fa-solid fa-calendar-check"></i>
+      <svg class="w-5 h-5 text-white" fill="currentColor" viewBox="0 0 20 20">
+        <path d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zM4 8h12v8H4V8z" />
+      </svg>
       Add Booking
     </a>
     <a
       href="/logout"
       class="flex items-center justify-center gap-2 text-red-500 hover:underline text-sm transition"
     >
-      <i class="fa-solid fa-right-from-bracket"></i>
+      <svg class="w-5 h-5 text-red-500" fill="currentColor" viewBox="0 0 20 20">
+        <path d="M3 3a1 1 0 011-1h6a1 1 0 110 2H5v12h5a1 1 0 110 2H4a1 1 0 01-1-1V3zm11.293 2.293a1 1 0 011.414 0L20 10l-4.293 4.707a1 1 0 01-1.414-1.414L16.586 11H9a1 1 0 110-2h7.586l-2.293-2.293a1 1 0 010-1.414z" />
+      </svg>
       Logout
     </a>
   </div>
@@ -89,7 +115,9 @@
   class="fixed top-4 left-4 z-50 p-2 bg-white rounded-md shadow-md md:hidden"
   aria-label="Toggle Sidebar"
 >
-  <i class="fa-solid fa-bars text-gray-800"></i>
+  <svg class="w-5 h-5 text-gray-800" fill="currentColor" viewBox="0 0 20 20">
+    <path d="M3 5h14a1 1 0 100-2H3a1 1 0 100 2zm14 4H3a1 1 0 000 2h14a1 1 0 000-2zm0 6H3a1 1 0 000 2h14a1 1 0 000-2z" />
+  </svg>
 </button>
 
 <script>
