--- a/public/admin/layout.html
+++ b/public/admin/layout.html
@@ -57,5 +57,51 @@
         }
       });
   </script>
+<script>
+  // Load sidebar dynamically
+  fetch("/admin/sidebar.html")
+    .then(res => res.text())
+    .then(html => {
+      const container = document.getElementById("sidebar-container");
+      container.innerHTML = html;
+
+      // Toggle sidebar (mobile)
+      document.getElementById("sidebarToggle")?.addEventListener("click", () => {
+        document.getElementById("sidebar").classList.toggle("-translate-x-full");
+      });
+
+      // Toggle submenus
+      document.querySelectorAll("[data-toggle]").forEach(btn => {
+        const id = btn.getAttribute("data-toggle");
+        const submenu = document.getElementById(id);
+        const icon = document.getElementById("icon-" + id);
+
+        btn.addEventListener("click", () => {
+          submenu?.classList.toggle("hidden");
+          icon?.classList.toggle("rotate-180");
+        });
+      });
+
+      // Highlight current link
+      const currentPath = window.location.pathname;
+      document.querySelectorAll("#sidebar a[href]").forEach(link => {
+        if (link.getAttribute("href") === currentPath) {
+          link.classList.add("bg-blue-100", "text-blue-700", "font-semibold");
+        }
+      });
+
+      // Fetch logo/business info
+      fetch('/api/business/public')
+        .then(res => res.json())
+        .then(data => {
+          if (data.business_name) document.getElementById('bizName').textContent = data.business_name;
+          if (data.logo_filename) document.getElementById('logo').src = '/uploads/' + data.logo_filename;
+        })
+        .catch(() => {});
+    });
+</script>
+
+
+
 </body>
 </html>
